--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,13 +10,18 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go:
+          - '1.22'
+          - '1.x'
     steps:
     - uses: actions/checkout@v2
 
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.22
+        go-version: ${{ matrix.go }}
         stable: false
 
     - name: Build
@@ -35,3 +40,4 @@ jobs:
         file: ./cover.out
         flags: unittests
         verbose: true
+      if: matrix.go == '1.22'
