--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,9 +24,9 @@ jobs:
     - name: Test
       run: make test
 
-    # remove tests in order to clean dependencies
+    # remove tests to clean dependencies
     - name: Remove xxx_test.go files
-      run: rm -rf *_test.go ./examples ./images
+      run: rm -rf $(find . -type f -name "*_test.go" ! -name "*_example_test.go") ./examples ./bench
 
     # cleanup test dependencies
     - name: Cleanup dependencies
