--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,8 +2,8 @@ name: Tests
 
 on:
   push:
-    tags:
     branches:
+      - main
   pull_request:
 
 jobs:
@@ -17,7 +17,8 @@ jobs:
           - '1.23'
           - '1.24'
           - '1.25'
-          - '1.x'
+          - '1.26'
+          - 'stable'
     steps:
     - uses: actions/checkout@v6
 
@@ -25,7 +26,6 @@ jobs:
       uses: actions/setup-go@v6
       with:
         go-version: ${{ matrix.go }}
-        stable: false
 
     - name: Build
       run: make build
